--- a/index.html
+++ b/index.html
@@ -66,9 +66,46 @@
             </div>
         </div>
         </section>
+        <section class="up-forecast">
+            <p class="next-title">Upcoming Weather Forecast</p>
+            <div class="next">
+                <a class="day">
+                    <div class="weather-icon">
+                    </div>
+                </a>
+                <a class="day">
+                    <div class="weather-icon">
+                    </div>
+                </a>
+                <a class="day ">
+                    <div class="weather-icon">
+                    </div>
+                </a>
+                <a class="day">
+                    <div class="weather-icon">
+                    </div>
+                </a>
+            </div>
+            <div class="next">
+                <div class="wh">
+                    <p>Day1</p>
+                </div>
+                <div class="wh">
+                    <p>Day1</p>
+                </div>
+                <div class="wh">
+                    <p>Day1</p>
+                </div>
+                <div class="wh">
+                    <p>Day1</p>
+                </div>
+            </div>
+        </section>
+        
     </section>
-
-
     <script src="js/script.js"></script>
+    <footer class="foot">
+        <p>This is Build by <a href="https://abhishekag2004.wixsite.com/abhishek" target="_blank">Abhishek</a></p>
+    </footer>
 </body>
 </html>
